--- a/BBRemoteMobile/app/src/main/AndroidManifest.xml
+++ b/BBRemoteMobile/app/src/main/AndroidManifest.xml
@@ -21,7 +21,14 @@
         <activity
             android:name=".InputActivity"
             android:label="@string/title_activity_input"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".CustomizeGamepadActivity"
+            android:label="@string/title_activity_customize_gamepad"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"></activity>
     </application>
 
 </manifest>
