Finished keyboard/mouse drivers, and mostly finished video

--- a/BBRemoteDesktop/app/app/app.vcxproj.filters
+++ b/BBRemoteDesktop/app/app/app.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="MouseProxy.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Modes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
