--- a/BBRemoteDesktop/app/app/app.vcxproj.filters
+++ b/BBRemoteDesktop/app/app/app.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="GamepadProxy.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GlobalFile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BluetoothReceiver.hpp">
@@ -57,6 +60,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Modes.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GlobalFile.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
