--- a/BBRemoteDesktop/app/app/app.vcxproj.filters
+++ b/BBRemoteDesktop/app/app/app.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="GlobalFile.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="NoInputProxy.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BluetoothReceiver.hpp">
@@ -63,6 +66,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GlobalFile.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="NoInputProxy.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
