Started testing Committing the app exe file Forgot to commit NoInputProxy.hpp from earlier

--- a/BBRemoteDesktop/app/app/app.vcxproj.filters
+++ b/BBRemoteDesktop/app/app/app.vcxproj.filters
@@ -71,5 +71,8 @@
     <ClInclude Include="NoInputProxy.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="HandleDataErrorCodes.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
