--- a/BBRemoteMobile/app/build.gradle
+++ b/BBRemoteMobile/app/build.gradle
@@ -37,4 +37,7 @@ dependencies {
     // Optional -- UI testing with Espresso
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
     androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.1'
+    androidTestCompile ("com.android.support.test.espresso:espresso-contrib:2.2.1")  {
+        exclude group: 'com.android.support', module: 'support-v4'
+    }
 }
