Finished keyboard and mouse tests

--- a/BBRemoteDesktop/BBDesktopAppUnitTests/BBDesktopAppUnitTests/BBDesktopAppUnitTests.vcxproj.filters
+++ b/BBRemoteDesktop/BBDesktopAppUnitTests/BBDesktopAppUnitTests/BBDesktopAppUnitTests.vcxproj.filters
@@ -71,5 +71,8 @@
     <ClCompile Include="FileWriter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MouseDriverTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
